feat: update decentralized training

--- a/resnet/config/train/decent_resnet50.toml
+++ b/resnet/config/train/decent_resnet50.toml
@@ -1,10 +1,12 @@
 batch_size = 512
 max_epochs = 60
-lr = 1e-3
+lr = 1.5e-3
 label_smoothing = 0.1
 checkpoint_dir = ""
 arch = "resnet50"
 use_amp = true
+backend = 'decentdp'
+decent_topo = 'alternating-exp-ring'
 
 [preprocess]
 preload_local = true
@@ -14,8 +16,9 @@ val_image_size = 256
 val_crop_size = 224
 
 [optim]
-name = 'adam'
+name = 'accumadam'
 weight_decay = 0.000030517578125
+accum_iter = 8
 
 [optim.adam]
 beta1 = 0.9
