--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 **/__pycache__
-/transformer/data
-/transformer/log*/
-/transformer/image
-/transformer/config/eval/tmp.eval.toml
-/resnet/data
-/resnet/log
-/resnet/image
+/data
+/log
+/image
